Fixed event contact spacing part3

--- a/master_style.css
+++ b/master_style.css
@@ -1010,8 +1010,6 @@ a>.schedule:hover {
 	}
 
 	.img-circle {
-		max-width:100%;
-		max-height:100%;
 		margin:auto;
 		text-align:center;
 		margin-bottom:20px;
